Chunking more efficiently

--- a/packages/server/index.html
+++ b/packages/server/index.html
@@ -113,6 +113,8 @@
 <body>
   <div id="root"></div>
   <script crossorigin src="{{{vendor}}}"></script>
+  <script crossorigin src="{{{runtime}}}"></script>
+  <script crossorigin src="{{{bufferapp}}}"></script>
   <script crossorigin src="{{{bundle}}}"></script>
 </body>
 
