Adjusting chunking logic to use native runtime and include missing css

--- a/packages/server/index.html
+++ b/packages/server/index.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   <link href="//icons.buffer.com/0.16.4/buffer-icons.css" rel="stylesheet" type="text/css" />
+  <link href="{{{bufferapp-css}}}" rel="stylesheet" type="text/css" />
   <link href="{{{bundle-css}}}" rel="stylesheet" type="text/css" />
   <style>
     * {
@@ -113,7 +114,6 @@
 <body>
   <div id="root"></div>
   <script crossorigin src="{{{vendor}}}"></script>
-  <script crossorigin src="{{{runtime}}}"></script>
   <script crossorigin src="{{{bufferapp}}}"></script>
   <script crossorigin src="{{{bundle}}}"></script>
 </body>
